--- a/templates/insights.html
+++ b/templates/insights.html
@@ -81,7 +81,7 @@
         </section>
 
         <!-- Download Report Button -->
-        <button class="download-btn">📥 Download Insights Report</button>
+        <button id="download-pdf-insights" class="download-btn btn">📥 Download Insights Report</button>
     </div>
 
 </section>
