--- a/templates/predict.html
+++ b/templates/predict.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{%
+     extends "base.html" %}
 
 {% block title %}Sales Prediction{% endblock %}
 
@@ -122,6 +123,7 @@
             </thead>
             <tbody></tbody>
         </table>
+        <button id="download-pdf" class="btn">Download PDF</button>
     </div>
 </section>
 
