--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
         <nav class="nav">
             <a href="{{ url_for('home') }}">Home</a>
             <a href="/insights">Insights</a>
+            <a href="{{ url_for('how_it_works') }}">How It Works</a>
             <!-- <a href="#data">Historical Data</a> -->
             <a href="/about-us">About</a>
             <a href="/contact">Contact</a>
