--- a/static/css/how_it_works.css
+++ b/static/css/how_it_works.css
@@ -46,8 +46,8 @@ body {
 
 .card:hover {
   transform: translateY(-8px);
-  box-shadow: 0px 12px 25px rgba(0, 255, 204, 0.3);
-  border-color: rgba(0, 255, 204, 0.6);
+  box-shadow: 0px 12px 25px #fff;
+  border-color: #fff;
 }
 
 /* Step Number */
